--- a/views/partials/usermanagement.hbs
+++ b/views/partials/usermanagement.hbs
@@ -104,7 +104,7 @@
                     <option>Site Admin</option>
                 </select></td>
             <td><a href="/">Contact User</a></td>
-            <td><a data-toggle="modal" data-target="#deleteUserModal" data-user-id="{{this._id}}" data-user-fullname="{{this.profile.fullName}}">Delete User</a></td>
+            <td><a data-toggle="modal" data-target="#deleteUserModal" data-user-id="{{this._id}}" data-user-fullname="{{this.profile.fullName}} " data-user-email="{{this.email}}">Delete User</a></td>
         </tr>
         {{/each}}
     </table>
@@ -117,11 +117,20 @@
         //get data-id attribute of the clicked element
         var userId = $(e.relatedTarget).data('user-id');
         var userName = $(e.relatedTarget).data('user-fullname');
-        console.log(userName);
+        var userEmail = $(e.relatedTarget).data('user-email');
         //populate the textbox
         $(e.currentTarget).find('input[name="userId"]').val(userId);
-        $(e.currentTarget).find('h4[name="usernameheader"]').text("Delete User: " + userName);
-        var message = "You are about to delete the profile for " + userName + ". This is permanent. Do you want to continue?";
-        $(e.currentTarget).find('p[name="usernameparagraph"]').text(message);
+
+        if (userName === ""){
+            $(e.currentTarget).find('h4[name="usernameheader"]').text("Delete User");
+            var message = "You are about to delete the profile for " + userEmail + ". This is permanent. Do you want to continue?";
+            $(e.currentTarget).find('p[name="usernameparagraph"]').text(message);
+        }
+        else {
+            $(e.currentTarget).find('h4[name="usernameheader"]').text("Delete User: " + userName);
+            var message = "You are about to delete the profile for " + userName + ". This is permanent. Do you want to continue?";
+            $(e.currentTarget).find('p[name="usernameparagraph"]').text(message);
+        }
+       
     });
 </script>
