--- a/views/partials/usermanagement.hbs
+++ b/views/partials/usermanagement.hbs
@@ -138,7 +138,7 @@
     function deleteUser() {
         var userId = $('#userId').val();
         $.ajax({
-            url: 'kennethfechter.me/deleteUser',
+            url: 'http://kennethfechter.me/deleteUser',
             dataType: 'json',
             data: { "userId": userId },
             type: "POST",
