--- a/views/partials/usermanagement.hbs
+++ b/views/partials/usermanagement.hbs
@@ -106,8 +106,7 @@
                     <div class="form-group">
                         <label for="body" class="col-sm-3 control-label">Body</label>
                         <div class="col-sm-7">
-                            <textarea name="body" id="body" class="form-control" />
-                        </div>
+=                        </div>
                     </div>
                 </div>
                 <div class="modal-footer">
