--- a/views/partials/usermanagement.hbs
+++ b/views/partials/usermanagement.hbs
@@ -91,24 +91,27 @@
                     <h4 class="modal-title" name="usernameheader">Contact User</h4>
                 </div>
                 <div class="modal-body">
-                    <div class="form-group">
-                        <label for="email" class="col-sm-3 control-label">Email</label>
-                        <div class="col-sm-7">
-                            <input type="email" readonly="readonly" name="email" id="email" placeholder="Email" class="form-control" />
+                    <form id="signup-form" method="POST" class="form-horizontal">
+                        <div class="form-group">
+                            <label for="email" class="col-sm-3 control-label">Email</label>
+                            <div class="col-sm-7">
+                                <input type="email" readonly="readonly" name="email" id="email" placeholder="Email" class="form-control" />
+                            </div>
                         </div>
-                    </div>
-                    <div class="form-group">
-                        <label for="subject" class="col-sm-3 control-label">Subject</label>
-                        <div class="col-sm-7">
-                            <input type="text" name="subject" id="subject" placeholder="Email" class="form-control" />
+                        <div class="form-group">
+                            <label for="subject" class="col-sm-3 control-label">Subject</label>
+                            <div class="col-sm-7">
+                                <input type="text" name="subject" id="subject" placeholder="Email" class="form-control" />
+                            </div>
                         </div>
-                    </div>
-                    <div class="form-group">
-                        <label for="body" class="col-sm-3 control-label">Body</label>
-                        <div class="col-sm-7">
-=                        </div>
-                    </div>
-                </div>
+                        <div class="form-group">
+                            <label for="body" class="col-sm-3 control-label">Body</label>
+                            <div class="col-sm-7">
+                                
+                            </div>
+                        </div>
+                        </form>
+</div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
                     <button type="button" class="btn btn-default" onclick="contactUser()" data-dismiss="modal">Contact User</button>
