--- a/views/partials/usermanagement.hbs
+++ b/views/partials/usermanagement.hbs
@@ -107,8 +107,8 @@
                         <div class="form-group">
                             <label for="body" class="col-sm-3 control-label">Body</label>
                             <div class="col-sm-7">
-                                <textarea name="body" id="body"></textarea>
-                            </div>
+                                <textarea name="body" id="body" cols="60" rows="25"></textarea>
+                            </div> 
                         </div>
                         </form>
 </div>
