--- a/views/partials/usermanagement.hbs
+++ b/views/partials/usermanagement.hbs
@@ -91,27 +91,15 @@
                     <h4 class="modal-title" name="usernameheader">Contact User</h4>
                 </div>
                 <div class="modal-body">
-                    <form id="signup-form" method="POST" class="form-horizontal">
-                        <div class="form-group">
-                            <label for="email" class="col-sm-3 control-label">Email</label>
-                            <div class="col-sm-7">
-                                <input type="email" readonly="readonly" name="email" id="email" placeholder="Email" class="form-control" />
-                            </div>
-                        </div>
-                        <div class="form-group">
-                            <label for="subject" class="col-sm-3 control-label">Subject</label>
-                            <div class="col-sm-7">
-                                <input type="text" name="subject" id="subject" class="form-control" />
-                            </div>
-                        </div>
-                        <div class="form-group">
-                            <label for="body" class="col-sm-3 control-label">Body</label>
-                            <div class="col-sm-7">
-                                <textarea name="body" id="body" cols="100" rows="15"></textarea>
-                            </div> 
-                        </div>
-                        </form>
-</div>
+                    <form class="contact" name="contact">
+                        <label class="label" for="name">Your Name</label><br>
+                        <input type="text" name="name" class="input-xlarge"><br>
+                        <label class="label" for="email">Your E-mail</label><br>
+                        <input type="email" name="email" class="input-xlarge"><br>
+                        <label class="label" for="message">Enter a Message</label><br>
+                        <textarea name="message" class="input-xlarge"></textarea>
+                    </form>
+                </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
                     <button type="button" class="btn btn-default" onclick="contactUser()" data-dismiss="modal">Contact User</button>
