--- a/views/partials/usermanagement.hbs
+++ b/views/partials/usermanagement.hbs
@@ -92,12 +92,12 @@
                 </div>
                 <div class="modal-body">
                     <form class="contact form-horizontal" name="contact">
-                        <label class="label" for="name">Your Name</label><br>
-                        <input type="text" name="name" class="input-xlarge"><br>
-                        <label class="label" for="email">Your E-mail</label><br>
-                        <input type="email" name="email" class="input-xlarge"><br>
-                        <label class="label" for="message">Enter a Message</label><br>
-                        <textarea name="message" class="input-xlarge"></textarea>
+                        <label class="control-label" for="name">Your Name</label><br>
+                        <input type="text" name="name"><br>
+                        <label class="control-label" for="email">Your E-mail</label><br>
+                        <input type="email" name="email"><br>
+                        <label class="control-label" for="body">Enter a Message</label><br>
+                        <textarea name="body"></textarea>
                     </form>
                 </div>
                 <div class="modal-footer">
