--- a/views/partials/usermanagement.hbs
+++ b/views/partials/usermanagement.hbs
@@ -91,13 +91,26 @@
                     <h4 class="modal-title" name="usernameheader">Contact User</h4>
                 </div>
                 <div class="modal-body">
-                    <form class="contact form-horizontal" name="contact">
-                        <label class="control-label" for="name">Your Name</label><br>
-                        <input type="text" name="name"><br>
-                        <label class="control-label" for="email">Your E-mail</label><br>
-                        <input type="email" name="email"><br>
-                        <label class="control-label" for="body">Enter a Message</label><br>
-                        <textarea name="body"></textarea>
+                    <form class="form-horizontal" name="commentform" method="post" action="send_form_email.php">
+                        <div class="form-group">
+                            <label class="control-label col-md-4" for="email">Email Address</label>
+                            <div class="col-md-6 input-group">
+                                <span class="input-group-addon">@</span>
+                                <input type="email" class="form-control" id="email" name="email" />
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label class="control-label col-md-4" for="first_name">Subject</label>
+                            <div class="col-md-6">
+                                <input type="text" class="form-control" id="subject" name="subject" />
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label class="control-label col-md-4" for="body">Email Body</label>
+                            <div class="col-md-6">
+                                <textarea rows="6" class="form-control" id="body" name="body"></textarea>
+                            </div>
+                        </div>
                     </form>
                 </div>
                 <div class="modal-footer">
