--- a/views/partials/usermanagement.hbs
+++ b/views/partials/usermanagement.hbs
@@ -94,13 +94,12 @@
                     <form class="form-horizontal" name="commentform" method="post" action="send_form_email.php">
                         <div class="form-group">
                             <label class="control-label col-md-4" for="email">Email Address</label>
-                            <div class="col-md-6 input-group">
-                                <span class="input-group-addon">@</span>
+                            <div class="col-md-6">
                                 <input type="email" class="form-control" id="email" name="email" />
                             </div>
                         </div>
                         <div class="form-group">
-                            <label class="control-label col-md-4" for="first_name">Subject</label>
+                            <label class="control-label col-md-4" for="subject">Subject</label>
                             <div class="col-md-6">
                                 <input type="text" class="form-control" id="subject" name="subject" />
                             </div>
