--- a/views/partials/usermanagement.hbs
+++ b/views/partials/usermanagement.hbs
@@ -95,7 +95,7 @@
                         <div class="form-group">
                             <label class="control-label col-md-4" for="email">Email Address</label>
                             <div class="col-md-6">
-                                <input type="email" class="form-control" id="email" name="email" />
+                                <input type="email" readonly="readonly" class="form-control" id="email" name="email" />
                             </div>
                         </div>
                         <div class="form-group">
