--- a/views/partials/usermanagement.hbs
+++ b/views/partials/usermanagement.hbs
@@ -30,26 +30,19 @@
                             </div>
                         </div>
                         <div class="form-group">
-                            <label for="password" class="col-sm-3 control-label">Password</label>
+                            <label for="mNumber" class="col-sm-3 control-label">M-Number</label>
                             <div class="col-sm-7">
-                                <input type="password" name="password" id="password" placeholder="Password" class="form-control" />
+                                <input type="text" name="mNumber" id="mNumber" class="form-control" />
                             </div>
                         </div>
                         <div class="form-group">
-                            <label for="confirmPassword" class="col-sm-3 control-label">Confirm Password</label>
+                            <label for="userRole" class="col-sm-3 control-label">User Role</label>
                             <div class="col-sm-7">
-                                <input type="password" name="confirmPassword" id="confirmPassword" placeholder="Confirm Password" class="form-control" />
-                            </div>
-                        </div>
-
-                        <div class="form-group">
-                            <label for="confirmPassword" class="col-sm-3 control-label">User Role</label>
-                            <div class="col-sm-7">
-                                <select>
-                                    <option value="Blocked" id="userRole">Blocked</option>
-                                    <option value="User" id="userRole">User</option>
-                                    <option value="Admin" id="userRole">Admin</option>
-                                    <option value="Site Admin" id="userRole">Site Admin</option>
+                                <select id="userRole">
+                                    <option value="Blocked">Blocked</option>
+                                    <option value="User">User</option>
+                                    <option value="Admin">Admin</option>
+                                    <option value="Site Admin">Site Admin</option>
                                 </select>
                             </div>
                         </div>
@@ -57,7 +50,7 @@
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
-                    <button type="button" class="btn btn-default" data-dismiss="modal">Create User</button>
+                    <button type="button" class="btn btn-default" data-dismiss="modal" onclick="createUser()">Create User</button>
                 </div>
             </div>
         </div>
@@ -180,6 +173,10 @@
 
     });
 
+    $('#createUserModal').on('show.bs.modal', function (e) {
+        $(e.currentTarget).find('input[name="mNumber"]').val("M");
+    });
+
     function deleteUser() {
         var userId = $('#userId').val();
         $.ajax({
@@ -193,16 +190,18 @@
     }
 
         function createUser() {
-            var userEmail;
-            var mNumber;
-            var roleName;
-            var isAdmin;
-            var isSiteAdmin;
+            var userEmail = $('email').val();
+            var mNumber = $('mNumber').val();
+            var roleName = $('roleName').val();
+
+            console.log(roleName);
+            console.log(mNumber);
+            console.log(userEmail);
 
             $.ajax({
                 url: '/createUser',
                 dataType: 'json',
-                data: { "userEmail": userEmail, "mNumber": mNumber, "isAdmin": isAdmin },
+                data: { "userEmail": userEmail, "mNumber": mNumber, "roleName": roleName },
                 type: "POST",
                 success: function (data) {
                 }
@@ -213,10 +212,6 @@
             var userEmail = $('#contactEmail').val();
             var emailSubject = $('#subject').val();
             var emailBody = $('#body').val();
-
-            console.log(userEmail);
-            console.log(emailSubject);
-            console.log(emailBody);
 
             $.ajax({
                 url: '/contactUser',
