--- a/views/partials/usermanagement.hbs
+++ b/views/partials/usermanagement.hbs
@@ -192,7 +192,7 @@
         function createUser() {
             var userEmail = $('#email').val();
             var mNumber = $('#mNumber').val();
-            var roleName = $('#roleName');
+            var roleName = $('#userRole');
 
             var roleSelected = roleName.options[roleName.selectedIndex].value;
 
